# rockiva

./: CHANGE_LOG.txt
demo/command_line_demo/: CMakeLists.txt  build-android-rk3588.sh  build-linux-rk3588.sh
demo/command_line_demo/install/rockiva_rk3588_linux/rockiva_demo/: nohup.out  rockiva_demo  rockiva_face_import_demo  rockiva_face_recog_demo  rockiva_face_search_demo  rockiva_one_demo  rockiva_video_demo
demo/command_line_demo/rockiva_demo/: CMakeLists.txt  face_recog_import_demo.c  face_recog_picture_demo.c  face_recog_search_demo.c  face_show.tar  iva_app.c  iva_app.h  iva_app_ctx.h  rockiva_demo.c  rockiva_one_demo.c  rockiva_video_demo.cpp
demo/command_line_demo/rockiva_demo/config/: iva_ba.json  iva_det.json  iva_face.json  iva_plate.json
demo/command_line_demo/rockiva_demo/face_show/: CMakeLists.txt  calculate_thread.cpp  calculate_thread.h  main.cpp  mainwindow.cpp  mainwindow.h  show_pci_info_thread.cpp  show_pci_info_thread.h  show_pci_thread.cpp  show_pci_thread.h  video_show.cpp  video_show.h  yuyv_qthread.cpp  yuyv_qthread.h
demo/command_line_demo/rockiva_demo/face_test/: CMakeLists.txt  main.cpp  mainwindow.cpp  v4l2_thread.cpp  v4l2_thread.h  videoshow.cpp  videoshow.h
demo/command_line_demo/rockiva_demo/face_test/face.si4project/: face.sip_xad  face.sip_xsd  face.siproj
demo/command_line_demo/rockiva_demo/modules/: iva_app_ba.c  iva_app_ba.h  iva_app_det.c  iva_app_det.h  iva_app_face.c  iva_app_face.h  iva_app_object.c  iva_app_object.h  iva_app_plate.c  iva_app_plate.h  iva_app_pose.c  iva_app_pose.h  iva_app_ts.c  iva_app_ts.h
demo/command_line_demo/rockiva_demo/tools/: video_to_images.py
demo/command_line_demo/rockiva_demo/utils/: common_utils.c  common_utils.h  face_db.c  face_db.h  image_buffer.c  image_buffer.h  image_utils.c  image_utils.h  mpp_encoder.cpp
librockiva/rockiva-rk3588-Linux/include/: rockiva_face_api.h
models/rockiva_data_rk3588/: carplate_attribute.data  carplate_detection_v3.data  face_attribute_v2.data  face_detection_v2.data  face_landmark5.data  face_landmarks106.data  face_mask_classify.data  face_quality_v2.data  object_detection_pfp.data  vehicle_attribute.data
rkauth_tool/Android/arm64-v8a/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
rkauth_tool/Android/armeabi-v7a/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
rkauth_tool/Linux/aarch64/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
rkauth_tool/Linux/armhf/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
rkauth_tool/Linux/armhf_uclibc/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
rkauth_tool/Linux/x86_64/: rkauth_tool_bin  rkauth_verify_licence  rkdevice_info
